@@ -39,7 +39,9 @@ m4 = @M4@
 indent = @INDENT@
 
 bin_PROGRAMS = flex
-lib_LIBRARIES = libfl.a
+lib_LIBRARIES = \
+	libfl.a \
+	libfl_pic.a
 
 flex_SOURCES = \
 	ccl.c \
@@ -67,6 +69,14 @@ flex_SOURCES = \
 libfl_a_SOURCES = \
 	libmain.c \
 	libyywrap.c
+
+libfl_pic_a_SOURCES = \
+	libmain.c \
+	libyywrap.c
+
+libfl_pic_a_CFLAGS =  \
+	-fPIC         \
+	$(AM_CFLAGS)
 
 noinst_HEADERS = \
 	flexdef.h \
